# llm-edge-studio

./: .gitignore  AddingModels.md  CMakeLists.txt  README.md  SBOM-llm-edge-studio-v2.0.1.spdx.json  build.sh
include/: aafconfig.h  aafconnector.h  submitprompt.h  version.h.in
llm-edge-studio/DEBIAN/: control  postinst  postrm
llm-edge-studio/usr/share/doc/llm-edge-studio/: LICENSE.txt  OFL-1.1.txt  SBOM-llm-edge-studio-v2.0.0.spdx.json
llm-edge-studio/usr/share/llm-edge-studio/: server_config.json
qml/: AboutDialog.qml  Main.qml  ModelDownloadDialog.qml  resources.qrc
scripts/: launch_llm_edge_studio.sh
src/: aafconnector.cpp  main.cpp  submitprompt.cpp
